--- a/iOS/MediaPickerSample02.iOS.csproj
+++ b/iOS/MediaPickerSample02.iOS.csproj
@@ -109,6 +109,7 @@
     <Reference Include="Xamarin.Mobile">
       <HintPath>..\Components\xamarin.mobile-0.7.5\lib\ios-unified\Xamarin.Mobile.dll</HintPath>
     </Reference>
+    <Reference Include="MonoTouch.Dialog-1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MediaPickerSample02\MediaPickerSample02.csproj">
